--- a/app/views/ucb_rails/admin/users/index.html.haml
+++ b/app/views/ucb_rails/admin/users/index.html.haml
@@ -10,6 +10,7 @@
       %th First Name
       %th Last Name
       %th Email
+      %th Alternate Email
       %th Phone
       %th.dt Last Request At
       %th UID
