--- a/app/views/ucb_rails/admin/users/_form.html.haml
+++ b/app/views/ucb_rails/admin/users/_form.html.haml
@@ -3,6 +3,7 @@
   = f.input :first_name, :input_html => {disabled: 'disabled'}
   = f.input :last_name, :input_html => {disabled: 'disabled'}
   = f.input :email, :input_html => {disabled: 'disabled'}
+  = f.input :alternate_email
   = f.input :phone, :input_html => {disabled: 'disabled'}
   = f.input :last_login_at, as: :string, :input_html => {disabled: 'disabled', value: datetime_to_s(@user.last_login_at, :long)}
   = f.input :last_request_at, as: :string, :input_html => {disabled: 'disabled', value: datetime_to_s(@user.last_request_at, :long)}
