--- a/dummy/app/views/layouts/_developer.html.haml
+++ b/dummy/app/views/layouts/_developer.html.haml
@@ -1,5 +1,5 @@
 = nav_dropdown("Developer") do
-  = dropdown_item("Bootstrap Examples", bvh_path)
+  = dropdown_item(icon('picture', "Bootstrap Examples"), bvh_path)
 
   - if RailsEnvironment.development?
     = dropdown_divider
