--- a/dummy/app/views/layouts/_navigation.html.haml
+++ b/dummy/app/views/layouts/_navigation.html.haml
@@ -2,24 +2,30 @@
   
   = brand(app_name, url: root_path, with_environment: true)
 
-  = nav_bar_links do
-    - if logged_in?
-      - if admin?
-        = nav_dropdown("Admin") do
-          = dropdown_item(announcements_text, admin_announcements_path)
-          = dropdown_item(icon('user', "Users"), ucb_rails_admin_users_path)
+  = nav_bar_wrapper do 
+    = nav_bar_links do
+      = nav_bar_link("Test", "")
       
-        = render partial: 'layouts/developer'
-
-
-    - else
-      %li
-        = link_to('Login', login_path)
-        
-  - if logged_in?
     = nav_bar_links(pull: 'right') do
-      = nav_dropdown("Logged in as #{current_user.full_name}") do
-        = dropdown_item(announcements_text, hidden_announcements_path)
-        = dropdown_divider
-        = dropdown_item(icon('remove', 'Logout'), logout_path)
+      - if logged_in?
+        - if admin?
+          = nav_dropdown("Admin") do
+            = dropdown_item(announcements_text, admin_announcements_path)
+            = dropdown_item(icon('user', "Users"), ucb_rails_admin_users_path)
         
+          = render partial: 'layouts/developer'
+
+        = nav_dropdown("Logged in as #{current_user.full_name}") do
+          - if admin?
+            = dropdown_item(icon('user', "Disable admin user"), toggle_admin_path)
+          - else
+            = dropdown_item(icon('user', "Enable admin user"), toggle_admin_path)
+          = dropdown_item(announcements_text, hidden_announcements_path)
+          = dropdown_divider
+          = dropdown_item(icon('remove', 'Logout'), logout_path)
+          
+
+      - else
+        %li
+          = link_to('Login', login_path)
+          
