--- a/lib/generators/ucb_rails/templates/app/views/layouts/application.html.haml
+++ b/lib/generators/ucb_rails/templates/app/views/layouts/application.html.haml
@@ -12,10 +12,10 @@
   %body{data: {controller: controller.controller_name, action: controller.action_name}}
     = render 'layouts/navigation'
     #main{:role => "main"}
-      .container-fluid
+      .container
         .content
-          .row-fluid
-            .span12
+          .row
+            .col-md-12
               = user_announcements
               = flash_messages
               = yield
