--- a/lib/generators/ucb_rails/templates/app/views/layouts/_footer.html.haml
+++ b/lib/generators/ucb_rails/templates/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
 .footer
   %hr
   .container
-    %p.muted.credit
+    %p.text-muted.credit
       = [UcbRails[:user_session_manager], session[:omniauth_provider] ].join(', ')
