default styling for datetimepickers

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -9,4 +9,5 @@
 @import 'ucb_rails/nav';
 @import 'ucb_rails/buttons';
 @import 'ucb_rails/bootstrap-view-helpers';
+@import 'ucb_rails/datetimepicker';
 
