--- a/app/views/ucb_rails/lps/_form.html.haml
+++ b/app/views/ucb_rails/lps/_form.html.haml
@@ -6,10 +6,13 @@
   = hidden_field_tag('result-link-class')
   = hidden_field_tag('result-link-url')
   
-  = label_tag 'first_name', 'First Name'
-  = text_field_tag("first_name")
+  .form-group
+    = label_tag 'first_name', 'First Name'
+    = text_field_tag("first_name", nil, class: "form-control")
+
+  .form-group
   = label_tag 'last_name', 'Last Name'
-  = text_field_tag("last_name")
+  = text_field_tag("last_name", nil, class: "form-control")
 
   = submit_button_tag('Search', id: 'lps-search')
   = button("Clear", url: "#", :id => 'lps-clear')
