--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -9,6 +9,7 @@
 @import 'ucb_rails/nav';
 @import 'ucb_rails/buttons';
 @import 'ucb_rails/modals';
+@import 'ucb_rails/forms';
 @import 'ucb_rails/bootstrap-view-helpers';
 @import 'ucb_rails/datetimepicker';
 
