--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
-@import 'dataTables/jquery.dataTables.bootstrap';
+@import 'dataTables/bootstrap/3/jquery.dataTables.bootstrap';
 @import 'ucb_rails/common';
 @import 'ucb_rails/branding';
 @import 'ucb_rails/typography';
