added sweet alert confirm dialogs

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -3,6 +3,9 @@
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
 @import 'dataTables/bootstrap/3/jquery.dataTables.bootstrap';
+@import 'sweet-alert';
+@import 'sweet-alert-confirm';
+@import 'user_announcements';
 @import 'ucb_rails/common';
 @import 'ucb_rails/branding';
 @import 'ucb_rails/typography';
