--- a/app/assets/stylesheets/ucb_rails/branding.sass
+++ b/app/assets/stylesheets/ucb_rails/branding.sass
@@ -57,10 +57,7 @@ html body .well
   .nav-list
     padding: 0
 
-.field_with_errors
-  display: inline-block
-
-.alert-error, .field_with_errors input, .field_with_errors select
+.alert-error, .has-errors
   background-color: #f2dede !important
   border-color: #eed3d7 !important
   color: #b94a48 !important
