turbolinks progress bar

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -5,6 +5,8 @@
 @import 'dataTables/bootstrap/3/jquery.dataTables.bootstrap';
 @import 'sweet-alert';
 @import 'sweet-alert-confirm';
+@import 'nprogress';
+@import 'nprogress-bootstrap';
 @import 'user_announcements';
 @import 'ucb_rails/common';
 @import 'ucb_rails/branding';
