--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -8,6 +8,7 @@
 // @import 'nprogress';
 // @import 'nprogress-bootstrap';
 @import 'user_announcements';
+@import 'bootstrap-view-helpers';
 @import 'ucb_rails/common';
 @import 'ucb_rails/branding';
 @import 'ucb_rails/typography';
