--- a/lib/generators/ucb_rails/templates/app/views/layouts/_navigation.html.haml
+++ b/lib/generators/ucb_rails/templates/app/views/layouts/_navigation.html.haml
@@ -13,11 +13,14 @@
           = render partial: 'layouts/developer'
 
         = nav_dropdown("Logged in as #{current_user.full_name}") do
+          - if Rails.env.development?
+            - if admin?
+              = dropdown_item(icon('user', "Disable admin user"), ucb_rails_admin_toggle_admin_path)
+            - else
+              = dropdown_item(icon('user', "Enable admin user"), ucb_rails_admin_toggle_admin_path)
+
           - if admin?
-            = dropdown_item(icon('user', "Disable admin user"), toggle_admin_path)
-          - else
-            = dropdown_item(icon('user', "Enable admin user"), toggle_admin_path)
-          = dropdown_item(announcements_text, hidden_announcements_path)
+            = dropdown_item(announcements_text, hidden_announcements_path)
           = dropdown_divider
           = dropdown_item(icon('remove', 'Logout'), logout_path)
           
