fix for bug in test email sending

--- a/lib/generators/ucb_rails/templates/app/views/layouts/_footer.html.haml
+++ b/lib/generators/ucb_rails/templates/app/views/layouts/_footer.html.haml
@@ -2,4 +2,5 @@
   %hr
   .container
     %p.text-muted.credit
-      = [UcbRails[:user_session_manager], session[:omniauth_provider] ].join(', ')
+      - if Rails.env.development?
+        = [UcbRails[:user_session_manager], session[:omniauth_provider] ].join(', ')
