further enhancements with datepicker and forms

--- a/app/assets/stylesheets/ucb_rails/nav.sass
+++ b/app/assets/stylesheets/ucb_rails/nav.sass
@@ -1,5 +1,11 @@
 .navbar
-  
+  .navbar-brand
+    padding-top: 0
+    
+    img
+      display: inline-block
+      height: 55px
+
   .dropdown-menu .dropdown:hover
     @include gradient-vertical($dropdown-link-hover-bg, darken($dropdown-link-hover-bg, 5%))
     color: white !important
