--- a/app/views/ucb_rails/admin/email_test/index.html.haml
+++ b/app/views/ucb_rails/admin/email_test/index.html.haml
@@ -1,8 +1,10 @@
 %h1 Send Test Email
 
-= form_tag(ucb_rails_admin_email_test_path) do
-  %p= text_field_tag :email, params[:email], placeholder: 'email@example.com', class: 'col-md-3'
-  %p= submit_button_tag "Send"
+= form_tag(ucb_rails_admin_email_test_path, class: "form-inline") do
+  .form-group
+    .input-group
+      = text_field_tag :email, params[:email], placeholder: 'email@example.com', class: 'form-control'
+    =submit_button_tag "Send"
   
 - if @email_result.present?  
   %hr
