typeahead input querying ldap

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -16,6 +16,8 @@
 @import 'ucb_rails/buttons';
 @import 'ucb_rails/modals';
 @import 'ucb_rails/forms';
+@import 'ucb_rails/loading';
+@import 'ucb_rails/typeahead';
 @import 'ucb_rails/bootstrap-view-helpers';
 @import 'ucb_rails/datetimepicker';
 
