update qa brand styles

--- a/app/assets/stylesheets/ucb_rails/nav.sass
+++ b/app/assets/stylesheets/ucb_rails/nav.sass
@@ -43,11 +43,11 @@
 
   a.navbar-brand, span.navbar-brand, a.navbar-brand:hover, span.navbar-brand:hover
     &.rails-development 
-      background-color: gold
+      border: 2px solid blue
       color: blue
     
     &.rails-quality_assurance 
-      background-color: blue
+      border: 2px solid gold
       color: gold    
 
 .sidebar-nav
