--- a/lib/generators/ucb_rails/templates/app/views/layouts/application.html.haml
+++ b/lib/generators/ucb_rails/templates/app/views/layouts/application.html.haml
@@ -4,9 +4,8 @@
     %meta{:charset => "utf-8"}
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, maximum-scale=1"}
     %title= content_for?(:title) ? yield(:title) : app_name_with_env
-    = include_gon 
+    = include_gon(init: true)
     = stylesheet_link_tag "application", :media => "all", "data-turbolinks-track" => false
-    =# include_gon
     = javascript_include_tag "application"
     = csrf_meta_tags
     = yield(:head)
