fix quick bug with stylesheet reference

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -10,7 +10,7 @@
 @import 'user_announcements';
 @import 'bootstrap-view-helpers';
 
-@import 'lib/select2'
+@import 'lib/select2';
 
 @import 'ucb_rails/common';
 @import 'ucb_rails/branding';
