add form error helper

--- a/app/assets/stylesheets/ucb_rails/branding.sass
+++ b/app/assets/stylesheets/ucb_rails/branding.sass
@@ -28,7 +28,7 @@ html body .form-actions
 .nav-header,a
   text-shadow: none !important
 
-html body .alert
+html body form .alert
   display: inline-block
 
 html body .sidebar-nav
