--- a/app/assets/stylesheets/ucb_rails/typography.sass
+++ b/app/assets/stylesheets/ucb_rails/typography.sass
@@ -10,7 +10,7 @@
   src: image_path('open-sans/opensans_bold_macroman/OpenSans-Light-webfont.eot')
   src: image_path('open-sans/opensans_bold_macroman/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'), image_path('open-sans/opensans_bold_macroman/OpenSans-Light-webfont.woff') format('woff'), image_path('open-sans/opensans_bold_macroman/OpenSans-Light-webfont.ttf') format('truetype'), image_path('open-sans/opensans_bold_macroman/OpenSans-Light-webfont.svg#open_sanslight') format('svg')
   font-weight: normal
-  font-style: normal   
+  font-style: normal
 
 @font-face
   font-family: 'open_sansregular'
@@ -33,11 +33,5 @@ html body
     color: $pri-blue
 
 body, p, li
-  font-family: "open_sansregular", "helvetica", "arial", sans-serif !important
+  font-family: 'Open Sans', sans-serif
 
-h1, h2, h3, h4, h5, h6, .thin
-  font-family: "open_sanslight", "helvetica", "arial", sans-serif !important
-  font-weight: 100 !important
-
-strong
-  font-family: "open_sansbold", "helvetica", "arial", sans-serif
