--- a/app/views/ucb_rails/admin/users/_form.html.haml
+++ b/app/views/ucb_rails/admin/users/_form.html.haml
@@ -1,10 +1,11 @@
 = simple_form_for(@user, url: url, method: method, :html => {:class => 'form-horizontal'}, wrapper: :horizontal_form) do |f|
+  - is_disabled = UcbRails.config.allow_user_edit ? false : 'disabled'
   = f.input :uid, :input_html => {disabled: 'disabled'}
-  = f.input :first_name, :input_html => {disabled: 'disabled'}
-  = f.input :last_name, :input_html => {disabled: 'disabled'}
-  = f.input :email, :input_html => {disabled: 'disabled'}
+  = f.input :first_name, :input_html => {disabled: is_disabled}
+  = f.input :last_name, :input_html => {disabled: is_disabled}
+  = f.input :email, :input_html => {disabled: is_disabled}
   = f.input :alternate_email
-  = f.input :phone, :input_html => {disabled: 'disabled'}
+  = f.input :phone, :input_html => {disabled: is_disabled}
   = f.input :last_login_at, as: :string, :input_html => {disabled: 'disabled', value: datetime_to_s(@user.last_login_at, :long)}
   = f.input :last_request_at, as: :string, :input_html => {disabled: 'disabled', value: datetime_to_s(@user.last_request_at, :long)}
   = f.input :last_logout_at, as: :string, :input_html => {disabled: 'disabled', value: datetime_to_s(@user.last_logout_at, :long)}
