Remove sweetalert as a dependency
* Using newer version in app.

--- a/app/assets/stylesheets/ucb_rails.css.scss
+++ b/app/assets/stylesheets/ucb_rails.css.scss
@@ -3,8 +3,8 @@
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
 @import 'dataTables/bootstrap/3/jquery.dataTables.bootstrap';
-@import 'sweet-alert';
-@import 'sweet-alert-confirm';
+// @import 'sweet-alert';
+// @import 'sweet-alert-confirm';
 // @import 'nprogress';
 // @import 'nprogress-bootstrap';
 @import 'user_announcements';
